# ez-ticket-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
app-cmd/: Cargo.toml
app-cmd/src/: adapter.rs  errors.rs  lib.rs  services.rs
app-cmd/src/services/: categories.rs  category.rs  product.rs
app-cmd/src/workflow/: product.rs
app-cmd/tests/: exec_cmd_category.rs  exec_cmd_product.rs  test_framework.rs
app-query/: Cargo.toml
app-query/src/: errors.rs  models.rs
app-query/src/models/: categories_all.rs  category.rs  image.rs  product.rs  products_all.rs
application/: Cargo.toml
application-command/: Cargo.toml
application-command/src/: adapter.rs  errors.rs  lib.rs  services.rs
application-command/src/adapter/: eventstore.rs  extension.rs  projector.rs  registry.rs
application-command/src/services/: commands.rs  content.rs
application-command/src/services/commands/: catalog.rs  categories.rs  category.rs  product.rs
application-query/: Cargo.toml
application-query/src/: adaptor.rs  errors.rs  lib.rs  models.rs
application-query/src/models/: catalog.rs  category.rs  product.rs
application/src/: errors.rs  lib.rs  services.rs
application/src/services/: commands.rs  queries.rs
application/src/services/commands/: category.rs  content.rs  product.rs
application/src/services/queries/: category.rs  product.rs
driver/: Cargo.toml
driver/src/: database.rs  errors.rs  lib.rs
driver/src/database/: category.rs  product.rs  query.rs
driver/src/database/query/: category.rs  product.rs
driver/src/repositories/: image.rs
driver/src/rmu/: category.rs
kernel/: Cargo.toml
kernel/src/: commands.rs  entities.rs  errors.rs  events.rs  lib.rs  repositories.rs
kernel/src/commands/: catalog.rs  category.rs  product.rs
kernel/src/entities/: catalog.rs  categories.rs  category.rs  image.rs  order.rs  product.rs  product_option.rs  product_options.rs  recipe.rs
kernel/src/entities/catalog/: desc.rs  id.rs  main_prod.rs  name.rs  opt_prod.rs  option_id.rs  sub_prod.rs
kernel/src/entities/category/: id.rs  name.rs  ordering_product.rs
kernel/src/entities/image/: bind_id.rs  id.rs
kernel/src/entities/order/: id.rs  item.rs  options.rs  plan.rs  quantity.rs
kernel/src/entities/product/: category.rs  desc.rs  id.rs  name.rs  options.rs  price.rs  stock.rs
kernel/src/entities/product_option/: option_id.rs
kernel/src/entities/product_options/: id.rs
kernel/src/entities/recipe/: id.rs
kernel/src/events/: catalog.rs  category.rs  product.rs
kernel/src/io/: events.rs
kernel/src/io/commands/: categories.rs  category.rs  product.rs
kernel/src/io/events/: categories.rs  category.rs  product.rs
kernel/src/process/: commands.rs  events.rs
kernel/src/process/commands/: categories.rs  category.rs  product.rs
kernel/src/process/events/: categories.rs  category.rs  product.rs
kernel/src/repositories/: category.rs  image.rs  product.rs
migrations/: 20241008170026_init.sql
server/: Cargo.toml
server/src/: app.rs  errors.rs  inject.rs  lib.rs  logging.rs  main.rs  routing.rs
server/src/routing/: catalog.rs  categories.rs  category.rs  content.rs  images.rs  product.rs  products.rs  request.rs  response.rs
server/src/routing/request/: catalog.rs  categories.rs  category.rs  content.rs  products.rs
server/src/routing/response/: errors.rs  product.rs
server/tests/: category_cmd_exec.rs  category_query_exec.rs
