[workspace]
members = [
  "app-cmd",
  "app-query",
  "driver",
  "kernel",
  "server"
]

resolver = "2"

[workspace.package]
license = "LGPL-3.0"

[workspace.dependencies]
tracing = "=0.1"

thiserror = "^2"
error-stack = "^0.5"
async-trait = "^0.1"

[workspace.dependencies.nitinol]
git = "https://github.com/HalsekiRaika/nitinol"
rev = "c8ef28ec8d4629843ba32110afe43fa098092c10"