[workspace]
members = [
  "app-cmd",
  "app-query",
  "driver",
  "kernel",
  "server"
]

resolver = "2"

[workspace.package]
license = "LGPL-3.0"

[workspace.dependencies]
tracing = "=0.1"

thiserror = "^2"
error-stack = "^0.5"
async-trait = "^0.1"

[workspace.dependencies.nitinol]
git = "https://github.com/HalsekiRaika/nitinol"
rev = "c51c51097d0e121be4b105666973159fe1cd1231"