[package]
name = "app-cmd"
version = "0.1.0"
edition = "2021"
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
tracing = "^0.1"

thiserror = { workspace = true }
error-stack = { workspace = true }
async-trait = { workspace = true }

nitinol = { workspace = true, features = ["process", "projection"] }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
nitinol = { workspace = true, features = ["process", "projection", "persistence", "protocol", "inmemory"] }

tracing-subscriber = "^0.3"
