[package]
name = "application-query"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
sqlx = { version = "^0.8", features = ["macros"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }

serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1", features = ["serde"] }

nitinol = { workspace = true, features = ["process"] }

kernel = { path = "../kernel" }
