[package]
name = "driver"
version = "0.1.0"
edition = "2021"
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "=0.8", features = ["runtime-tokio", "migrate", "postgres", "sqlite", "uuid"] }
nitinol = { workspace = true, features = ["process", "protocol", "sqlite"] }

thiserror = { workspace = true }
error-stack = { workspace = true }
async-trait = { workspace = true }

application-query = { path = "../application-query" }
kernel = { path = "../kernel" }
