[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
error-stack = { workspace = true }
async-trait = { workspace = true }