[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "=0.7", features = ["json", "query", "multipart"] }
tokio = { version = "^1", features = ["full"] }

image = "^0.25"

tracing = { workspace = true }
tracing-subscriber = { version = "=0.3", features = ["env-filter"] }
tracing-appender = "=0.2"

thiserror = { workspace = true }
error-stack = { workspace = true }

nitinol = { workspace = true, features = ["protocol"] }

application = { path = "../application" }
driver = { path = "../driver" }
kernel = { path = "../kernel" }
