[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "=0.7", features = ["json", "query", "multipart"] }
mime = "^0.3"

tokio = { version = "^1", features = ["full"] }
futures-util = "^0.3"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
image = "^0.25"

tracing = { workspace = true }
tracing-subscriber = { version = "=0.3", features = ["env-filter"] }
tracing-appender = "=0.2"

thiserror = { workspace = true }
error-stack = { workspace = true }

async-trait = { workspace = true }

nitinol = { workspace = true, features = ["protocol", "process", "process-ext", "persistence"] }

console-subscriber = "^0.4"

application-command = { path = "../application-command" }
application-query = { path = "../application-query" }
driver = { path = "../driver" }
kernel = { path = "../kernel" }

[dev-dependencies]
serde_json = "^1.0"