[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
apidoc = ["utoipa", "utoipa-swagger-ui"]

[dependencies]
axum = { version = "=0.8", features = ["json", "query", "multipart", "tracing"] }
mime = "^0.3"

tokio = { version = "^1", features = ["full"] }

utoipa = { version = "=5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "=9", features = ["axum", "vendored"], optional = true }

serde = { version = "^1.0", features = ["derive"] }
image = "^0.25"

tracing = { workspace = true }
tracing-subscriber = { version = "=0.3", features = ["env-filter"] }
tracing-appender = "=0.2"

thiserror = { workspace = true }
error-stack = { workspace = true }

app-cmd = { path = "../app-cmd" }
app-query = { path = "../app-query" }
driver = { path = "../driver" }
kernel = { path = "../kernel" }

[dependencies.nitinol]
workspace = true
features = [
  "process",
  "persistence",
  "projection",
  "protocol",
  "sqlite",
  "eventstream",
]

[dev-dependencies]